// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgrammingView > renders programming prompt 1`] = `
<div>
  <div>
     
    <div>
      プログラミング問題
    </div>
     
    <pre>
      Write add(a,b)
    </pre>
     
  </div>
</div>
`;

exports[`ProgrammingView > renders programming with answer shown 1`] = `
<div>
  <div>
     
    <div>
      プログラミング問題
    </div>
     
    <pre>
      function add(a,b){return a+b}
    </pre>
     
  </div>
</div>
`;
